--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>Mobile Settings Stand-alone App</h1>
+<h1 class="titleStyle">Mobile Location Settings</h1>
+<hr>
+<div class="mainInformation">
+    <h1 class="proposalIdStyle">Proposal Id: {{proposalId}}</h1>
+    <h1 class="projectIdStyle">Project Id: {{projectId}}</h1>
+</div>
+
 <areaSpecificationForm></areaSpecificationForm>
