--- a/app/areaSpecificationForm/SelectedCategoryList/SelectedCategoryList.component.html
+++ b/app/areaSpecificationForm/SelectedCategoryList/SelectedCategoryList.component.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h4>YOU SELECTED</h4>
 
-</body>
-</html>
+<selectedCategory *ngFor="#categoryItem of categoryList">
+        [category]="categoryItem"
+</selectedCategory>
+
