DIY 18 fix selected category list

--- a/app/areaSpecificationForm/SelectedCategoryList/SelectedCategoryList.component.html
+++ b/app/areaSpecificationForm/SelectedCategoryList/SelectedCategoryList.component.html
@@ -1,6 +1,5 @@
 <h4>YOU SELECTED</h4>
-
-<selectedCategory *ngFor="#categoryItem of categoryList">
-        [category]="categoryItem"
+<selectedCategory *ngFor="#categoryItem of categoryList" [category]="categoryItem">
+        
 </selectedCategory>
 
