DIY-24 - Send Mobile setting data from angular2 app to the server - Create a new class and service to send data to the server

--- a/app/areaSpecificationForm/areaSpecificationForm.component.html
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.html
@@ -207,5 +207,5 @@
             <input ngControl="studyId" type="text" name="studyId" id="studyId" required>
         </li>
     </ul>
-    <button type="submit">Save</button>
+    <button (click)="save()">Save</button>
 </form>
