(panglat)DIY-24 - Send Mobile setting data from angular2 app to the server - UI interaction

--- a/app/areaSpecificationForm/areaSpecificationForm.component.css
+++ b/app/areaSpecificationForm/areaSpecificationForm.component.css
@@ -17,3 +17,17 @@ ul{
     border: solid;
     overflow-y: scroll;
 }
+
+.titleStyle{
+    text-align: center;
+}
+.proposalIdStyle{
+    display: inline-block;
+}
+.projectIdStyle{
+    display: inline-block;
+    margin-left: 80px;
+}
+.mainInformation{
+
+}
