--- a/app/areaSpecificationForm/selectedCategoryList/selectedCategory/selectedCategory.component.html
+++ b/app/areaSpecificationForm/selectedCategoryList/selectedCategory/selectedCategory.component.html
@@ -1,2 +1,4 @@
-<h1>{{category.name}}</h1>
-<button>Delete</button>
+<div>
+    <h5 style="display: inline">{{category.name}}</h5>
+    <button (click)="onDelete($event)">x</button>
+</div>
